--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,4 +46,5 @@ jobs:
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: v0.1.0
           files: dist/*.whl
