--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
             --python_out=pyballista/proto \
             --grpc_python_out=pyballista/proto \
             pyballista/protosrc/*.proto
+          echo "Listing compiled files:"
+          ls -l pyballista/proto
 
       - name: Fix relative imports
         run: |
